--- a/ui/src/app/views/application/show/admin/deployment/application.deployment.scss
+++ b/ui/src/app/views/application/show/admin/deployment/application.deployment.scss
@@ -1,30 +1,20 @@
-.ui.form .fields {
-  margin-bottom: 0;
-  .field {
-    .ui.button {
-      margin-top: 1.7em;
-    }
-  }
-
-  .table {
-    margin-top: 1.7em;
-  }
+.configPadding {
+  padding-left: 30px;
+  padding-right: 30px;
 }
-.mb5 {
-  margin-bottom: 5px;
+
+h3 {
+  margin-bottom: 30px;
 }
-.strategy {
-  min-height: 20px;
 
-  .detail {
-    max-height: 0;
-    transition: all 0.15s ease-out;
-    opacity: 0;
-  }
+i {
+  margin-left: 5px;
+}
 
-  .detail.active {
-    max-height: 500px;
-    transition: all 0.25s ease-in;
-    opacity: 1;
-  }
+.action {
+  margin-bottom: 15px;
+}
+
+.alignRight {
+  text-align: right;
 }
