fix(ui): fix translate and unit test

--- a/ui/src/app/views/application/show/admin/application.admin.html
+++ b/ui/src/app/views/application/show/admin/application.admin.html
@@ -29,7 +29,7 @@
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item nzJustify="end">
-                <button nz-button nzType="primary" [nzLoading]="loading" name="updateDescriptionButton" (click)="onSubmitApplicationUpdate()" [disabled]="loading || application.from_repository">
+                <button nz-button nzType="primary" [nzLoading]="loading" name="updateNameButton" (click)="onSubmitApplicationUpdate()" [disabled]="loading || application.from_repository">
                     Save
                 </button>
             </nz-form-item>
