fix(ui): set redirect uri when navigate on protected project

--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -235,7 +235,7 @@
                 </ng-container>
 
                 <li nz-menu-item>
-                    <nz-switch [ngModel]="darkActive" (ngModelChange)="changeTheme()"></nz-switch>Dark Model
+                    <nz-switch [ngModel]="darkActive" (ngModelChange)="changeTheme()"></nz-switch>Dark mode
                 </li>
 
                 <ng-container *ngIf="currentAuthSummary">
