--- a/ui/src/app/shared/ascode/events/ascode.event.scss
+++ b/ui/src/app/shared/ascode/events/ascode.event.scss
@@ -1,11 +1,13 @@
 .asCodeEvents {
-
   ul {
     li {
       ul {
         list-style: none;
       }
     }
+  }
+  .footer {
+    text-align: right;
   }
 }
 
